--- a/lib/css/purple.css
+++ b/lib/css/purple.css
@@ -1,4 +1,4 @@
-/* @theme ume_default_custom_2 */
+/* @theme ume-purple */
 /*
 
 copy ../../images to your project's directory
@@ -532,4 +532,4 @@ blockquote p {
   font-size: 1rem;
 }
 
-/*# sourceMappingURL=custom2.css.map */
+/*# sourceMappingURL=purple.css.map */
