--- a/lib/css/_colors.scss
+++ b/lib/css/_colors.scss
@@ -1,24 +1,23 @@
 @use 'sass:color';
-$scheme: 1 !default;
+$scheme: 1 !default; //blue
 
-$primary: hsl(196, 79%, 29%);
-$secondary: color.adjust($primary, $hue: 190, $saturation: 25%, $lightness: 10%);
-$accent: color.adjust($secondary, $hue: 24, $saturation: -10%, $lightness: 25%);
+$primary: hsl(208, 46%, 25%);
+$secondary: hsl(12, 72%, 41%);
+$accent: hsl(42, 83%, 63%);
 
-@if $scheme ==2 {
+@if $scheme ==2 { //purple
 
-    $primary: hsl(293, 47%, 24%);
-    $secondary: hsl(110, 64%, 33%);
-    $accent: hsl(63, 69%, 53%);
+    $primary: hsl(268, 33%, 35%);
+    $secondary: hsl(343, 72%, 36%);
+    $accent: hsl(42, 89%, 62%);
 
 }
 
-@if $scheme == 3 {
+@if $scheme == 3 { //green
 
-    $primary: hsl(165, 70%, 17%);
-    $secondary: color.complement($primary);
-    $secondary: color.adjust($secondary, $saturation: 70%, $lightness: 20%, $hue: -60);
-    $accent: color.adjust($secondary, $hue: 60, $saturation: -20%, $lightness: 50%);
+    $primary: hsl(134, 29%, 31%);
+    $secondary: hsl(295, 64%, 26%);
+    $accent: hsl(10, 82%, 74%);
 
 }
 
@@ -27,10 +26,10 @@ $accent: color.adjust($secondary, $hue: 24, $saturation: -10%, $lightness: 25%);
     $secondary: hsl($hue: 165, $saturation: 80%, $lightness: 25%);
     $accent: color.adjust($secondary, $hue: -30, $saturation: -40%, $lightness: 40%);
 }
-@if $scheme == 5 {
-    $primary: hsl($hue: 25, $saturation: 80%, $lightness: 45%);
-    $secondary: hsl($hue: 165, $saturation: 80%, $lightness: 25%);
-    $accent: color.adjust($secondary, $hue: -30, $saturation: -40%, $lightness: 40%);
+@if $scheme == 5 { //orange
+    $primary: hsl(17, 57%, 48%);
+    $secondary: hsl(174, 42%, 26%);
+    $accent: hsl(79, 71%, 67%);
 }
 
 $white: color.mix($primary, white, 15%);
