--- a/lib/css/blue.css
+++ b/lib/css/blue.css
@@ -1,4 +1,4 @@
-/* @theme ume_default_custom_3 */
+/* @theme ume-blue */
 /*
 
 copy ../../images to your project's directory
@@ -6,7 +6,7 @@ copy ../../images to your project's directory
 */
 @import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@100;300;400;500;700;800;900&family=Noto+Sans+JP:wght@100..900&display=swap");
 h2, section.impact h1 {
-  background-image: linear-gradient(to bottom right, #f8c3d1, #8e00bd 100%);
+  background-image: linear-gradient(to bottom right, hsl(42, 83%, 63%), hsl(12, 72%, 41%) 100%);
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -36,7 +36,7 @@ section {
   width: 1440px;
   height: 900px;
   text-align: left;
-  color: hsl(165, 70%, 17%);
+  color: hsl(208, 46%, 25%);
   background-color: white;
   align-content: center;
   margin: 0;
@@ -52,7 +52,7 @@ section::after {
   position: absolute;
   bottom: 20px;
   right: 20px;
-  color: #8e00bd;
+  color: hsl(12, 72%, 41%);
 }
 section.image-h100 img {
   all: unset;
@@ -201,12 +201,12 @@ section.vsm table * {
   font-size: 0.91rem;
 }
 section.cover {
-  background-color: hsl(165, 70%, 17%);
+  background-color: hsl(208, 46%, 25%);
   position: relative;
   align-content: center;
 }
 section.cover::after {
-  color: #f8c3d1;
+  color: hsl(42, 83%, 63%);
 }
 section.cover::before {
   content: "";
@@ -242,20 +242,20 @@ section.cover h2 {
   -webkit-text-fill-color: unset;
   text-align: center;
   margin: 0.3em 0;
-  color: #f8c3d1;
+  color: hsl(42, 83%, 63%);
 }
 section.cover h2::after {
   all: unset;
 }
 section.cover h3 {
-  color: #dbe4e2;
+  color: #dee3e7;
   text-align: center;
 }
 section.cover header {
   all: unset;
 }
 section.cover footer {
-  color: #f8c3d1;
+  color: hsl(42, 83%, 63%);
 }
 section.overview {
   padding: 0;
@@ -272,7 +272,7 @@ section.overview > div > div {
   padding-bottom: 100px;
 }
 section.overview > div > div:first-child {
-  background-color: hsl(165, 70%, 17%);
+  background-color: hsl(208, 46%, 25%);
   color: white;
   padding-right: 50px;
 }
@@ -281,7 +281,7 @@ section.overview > div > div:nth-child(2) {
 }
 section.overview h2 {
   font-size: 3rem;
-  color: #dbe4e2;
+  color: #dee3e7;
   background-image: unset;
   background-clip: unset;
   -webkit-text-fill-color: unset;
@@ -306,17 +306,17 @@ section.overview li {
   margin: 0;
   font-size: 2.5rem;
   font-weight: 700;
-  color: #8e00bd;
+  color: hsl(12, 72%, 41%);
 }
 section.overview li::marker {
-  color: #f8c3d1;
+  color: hsl(42, 83%, 63%);
 }
 section.overview.sm li {
   font-size: 1.5rem;
 }
 section.overview > header,
 section.overview > footer {
-  color: #dbe4e2;
+  color: #dee3e7;
 }
 section.sub {
   padding: 0;
@@ -328,7 +328,7 @@ section.sub > div {
 }
 section.sub > div > div:first-child {
   flex: 0 0 0;
-  background-color: hsl(165, 70%, 17%);
+  background-color: hsl(208, 46%, 25%);
   color: white;
   padding: 100px;
   padding-top: 101px;
@@ -342,7 +342,7 @@ section.sub > div > div:nth-child(2) {
 }
 section.sub h2 {
   font-size: 3rem;
-  color: #dbe4e2;
+  color: #dee3e7;
   background-image: unset;
   background-clip: unset;
   -webkit-text-fill-color: unset;
@@ -363,22 +363,22 @@ section.sub li {
   flex: 0 0 auto;
   font-size: 2.5rem;
   font-weight: 700;
-  color: #8e00bd;
+  color: hsl(12, 72%, 41%);
   margin: 0;
   padding: 0;
 }
 section.sub li::marker {
-  color: #f8c3d1;
+  color: hsl(42, 83%, 63%);
 }
 section.sub.sm li {
   font-size: 2rem;
 }
 section.sub header {
-  color: #dbe4e2;
+  color: #dee3e7;
 }
 footer, header {
   width: 100%;
-  color: #8e00bd;
+  color: hsl(12, 72%, 41%);
   position: absolute;
   padding-left: 100px;
   left: 0;
@@ -387,8 +387,8 @@ footer, header {
 
 header {
   height: 100px;
-  background-color: hsl(165, 70%, 17%);
-  color: #dbe4e2;
+  background-color: hsl(208, 46%, 25%);
+  color: #dee3e7;
   font-size: 1.5rem;
   top: 0;
 }
@@ -419,13 +419,13 @@ h2::after {
   height: 7px;
   margin-top: 10px;
   margin-bottom: 1em;
-  background-color: #6e9289;
+  background-color: #7a8e9e;
 }
 
 h3 {
   font-size: 1.8rem;
   font-weight: 700;
-  color: #3d6e62;
+  color: #4e687d;
   margin: 0;
   margin-bottom: 0.8em;
   position: relative;
@@ -439,13 +439,13 @@ h3::before {
   left: calc(0em - 2.34rem);
   width: 1.8rem;
   height: 1.8rem;
-  background-color: #f8c3d1;
+  background-color: hsl(42, 83%, 63%);
 }
 
 h4 {
   font-size: 1.44rem;
   font-weight: 700;
-  color: hsl(165, 70%, 17%);
+  color: hsl(12, 72%, 41%);
   opacity: 0.8;
   margin: 0;
   margin-bottom: 0.6em;
@@ -456,31 +456,31 @@ p {
   line-height: 1.7em;
   margin: 0;
   margin-bottom: 1em;
-  color: #3d6e62;
+  color: #4e687d;
 }
 
 table {
-  border: 1px solid #8e00bd;
+  border: 1px solid hsl(12, 72%, 41%);
   border-collapse: collapse;
 }
 
 th,
 td {
-  border: 1px solid #f8c3d1;
+  border: 1px solid hsl(42, 83%, 63%);
   border-collapse: collapse;
   padding: 0.4em;
 }
 
 tr {
-  color: #3d6e62;
+  color: #4e687d;
 }
 tr:nth-child(2n) * {
-  background-color: #dbe4e2;
-  color: hsl(165, 70%, 17%);
+  background-color: #dee3e7;
+  color: hsl(208, 46%, 25%);
 }
 
 th {
-  background-color: #f8c3d1;
+  background-color: hsl(42, 83%, 63%);
 }
 
 li {
@@ -489,11 +489,13 @@ li {
   margin: 0.4em 0;
 }
 li::marker {
-  color: #8e00bd;
+  color: hsl(12, 72%, 41%);
 }
 
 a {
-  color: #8e00bd;
+  color: hsl(12, 72%, 41%);
+  text-decoration-thickness: 3px;
+  text-decoration-color: #c3624a;
 }
 
 .center {
@@ -510,13 +512,14 @@ div.columns-2 > div {
 }
 
 div.mail {
-  border: 2px solid #bb66d7;
+  border: 2px solid #e1b1a5;
   border-radius: 0.3em;
+  box-shadow: 10px 10px 20px #f0d8d2;
   padding: 25px;
 }
-div.mail > div {
-  border-top: 1px solid #f8c3d1;
-  border-bottom: 1px solid #f8c3d1;
+div.mail > div:first-of-type {
+  border-top: 1px solid hsl(42, 83%, 63%);
+  border-bottom: 1px solid hsl(42, 83%, 63%);
 }
 div.mail * {
   font-size: 0.98rem;
@@ -524,7 +527,7 @@ div.mail * {
 
 blockquote {
   border-radius: 1em;
-  background-color: #cfdbd8;
+  background-color: #d3d9df;
   padding: 0.7em;
 }
 blockquote p {
@@ -532,4 +535,4 @@ blockquote p {
   font-size: 1rem;
 }
 
-/*# sourceMappingURL=custom3.css.map */
+/*# sourceMappingURL=blue.css.map */
